# SignalLang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Tests/: errorHandlerTest.cpp  errorHandlerTest.h  symbolTableTest.cpp  symbolTableTest.h
errorHandler/: README.md  errorHandler.cpp  errorHandler.h
examples/: example.signal
lexer/: lexer.cpp  lexer.h  token.h
parser/: parser.cpp  parser.h
symbolTable/: README.md  symbolTable.cpp  symbolTable.h
tac/: dce.cpp  dce.h  tac.h  tacGen.cpp  tacGen.h
